# Garbage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/home-lab/: README.md  compose.yml
scripts/: collect_training_crops.py
src/garbage_vision/: __init__.py  __main__.py  app.py  config.py  detector.py  logging_setup.py  notifier.py  object_detector.py  sources.py
training/datasets/desk-trash/: desk-trash.yaml
training/datasets/desk-trash/labels/train/: 11a4706d-desk_roi_20260704T143926070805Z.txt  169b2a60-desk_roi_20260704T144118104658Z.txt  1ad34ae2-desk_roi_20260704T144126078052Z.txt  29bf89b7-desk_roi_20260704T144030076893Z.txt  333647a2-desk_roi_20260704T144134096624Z.txt  3bc2792d-desk_roi_20260704T144110096164Z.txt  435bd760-desk_roi_20260704T143910076922Z.txt  494f1acb-desk_roi_20260704T143958083072Z.txt  53804dab-desk_roi_20260704T144014100477Z.txt  5ba208b5-desk_roi_20260704T143902101829Z.txt  62f74e30-desk_roi_20260704T144102137893Z.txt  68c7e139-desk_roi_20260704T143918078575Z.txt  71b4fb2f-desk_roi_20260704T143846111753Z.txt  7223604b-desk_roi_20260704T143854107482Z.txt  7e5a47c3-desk_roi_20260704T143934084037Z.txt  b3fdc686-desk_roi_20260704T144006068847Z.txt  bea76a8a-desk_roi_20260704T144046102813Z.txt  bf78497f-desk_roi_20260704T144038073418Z.txt
training/datasets/desk-trash/labels/val/: edb9bc12-desk_roi_20260704T144022106588Z.txt  f3fb5192-desk_roi_20260704T144054104591Z.txt  f5f1e81f-desk_roi_20260704T144142085435Z.txt  fdcb40ef-desk_roi_20260704T143950077302Z.txt  (+1 more)
